<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">stf</string>
    <string name="text1">Giriş</string>
    <string name="phone" tools:ignore="MissingTranslation">Telefon Numarası</string>
    <string name="password" tools:ignore="MissingTranslation">Şifre</string>
    <string name="login" tools:ignore="MissingTranslation">Giriş</string>
    <string name="kayitYap" tools:ignore="MissingTranslation">Kaydol</string>
    <string name="şifremiUnuttum" tools:ignore="MissingTranslation">Şifremi Unuttum</string>
    <string name="isimSuyisim" tools:ignore="MissingTranslation">İsim Soyisim</string>
    <string name="telefonNum" tools:ignore="MissingTranslation">Telefon Numarası</string>
    <string name="passwordTekrar" tools:ignore="MissingTranslation">Şifre Onay</string>
    <string name="mail" tools:ignore="ExtraTranslation,MissingTranslation">E-Posta</string>
    <string name="ileri" tools:ignore="MissingTranslation">İlerle</string>
    <string name="kayitOl" tools:ignore="MissingTranslation">Kayıt Ol</string>
    <string name="telefonNumarasiEksik" tools:ignore="MissingTranslation">Lütfen Telefon Numarasını Eksiksiz Giriniz</string>
    <string name="sayin" tools:ignore="MissingTranslation">Hoşgeldiniz</string>
    <string name="cihazId" tools:ignore="MissingTranslation">Tarla Mevkii</string>
    <string name="cihazAdi" tools:ignore="MissingTranslation">Cihaz Adı</string>
    <string name="eklenenCihazListesi" tools:ignore="MissingTranslation">Eklenen Cihaz Bilgileri</string>
    <string name="cihazEkle" tools:ignore="MissingTranslation">Cihaz Ekle</string>
    <string name="kayidiTamamla" tools:ignore="MissingTranslation">Kayıt İşlemini Tamamla</string>
    <string name="bildirim" tools:ignore="MissingTranslation">Bildirimler</string>
    <string name="uyariMesaji" tools:ignore="MissingTranslation">Uyarı Mesajları</string>
    <string name="cihaz" tools:ignore="MissingTranslation">Cihaz</string>
    <string name="calismaZamani" tools:ignore="MissingTranslation">Çalışma Zamanı</string>
    <string name="sonYikamaZamani" tools:ignore="MissingTranslation">Son Yıkama Zamanı</string>
    <string name="saat" tools:ignore="MissingTranslation">saat</string>
    <string name="simdi" tools:ignore="MissingTranslation">Şimdi</string>
    <string name="calisiyor" tools:ignore="MissingTranslation">Çalışıyor</string>
    <string name="batariye" tools:ignore="MissingTranslation">Batarya</string>
    <string name="sarjDurumu" tools:ignore="MissingTranslation">Şarj Durumu</string>
    <string name="filtreAyarlari" tools:ignore="MissingTranslation">Filtre Ayarları</string>
    <string name="icBasinc" tools:ignore="MissingTranslation">İç Basıncı</string>
    <string name="disBasinc" tools:ignore="MissingTranslation">Dış Basıncı</string>
    <string name="calismaSuresi" tools:ignore="MissingTranslation">Çalışma Süresi:</string>
    <string name="calismaDetayi" tools:ignore="MissingTranslation">Çalışma Detayı</string>
    <string name="gecmisSaat" tools:ignore="MissingTranslation">Saat Önce</string>
    <string name="sonBildirimler" tools:ignore="MissingTranslation">Son Bildirimler</string>
    <string name="cihazAyarlari" tools:ignore="MissingTranslation">Cihaz Ayarları</string>
    <string name="donanimSürümü" tools:ignore="MissingTranslation">Donanım Yazılımı Sürümü</string>
    <string name="sonGuncellem" tools:ignore="MissingTranslation">Son Güncelleme</string>
    <string name="cihazDurumu" tools:ignore="MissingTranslation">Cihaz Durumu</string>
    <string name="bagli" tools:ignore="MissingTranslation">Bağlı</string>
    <string name="cihaziOku" tools:ignore="MissingTranslation">Cihazı Oku</string>
    <string name="numaraliCihaz" tools:ignore="MissingTranslation">No\'lu Cihaz</string>
    <string name="yikamaAyarlari" tools:ignore="MissingTranslation">Yıkama Ayarları</string>
    <string name="basincAyari" tools:ignore="MissingTranslation">Basınç Ayarı</string>
    <string name="yikamaTarihi" tools:ignore="MissingTranslation">Yıkama Tarihi</string>
    <string name="yikamaSaati" tools:ignore="MissingTranslation">Yıkama Saati</string>
    <string name="ayarlariKaydet" tools:ignore="MissingTranslation">Ayarları Kaydet</string>
    <string name="sifreIslemleri" tools:ignore="MissingTranslation">Şifre İşlemleri</string>
    <string name="sifreyiOnayla" tools:ignore="MissingTranslation">Şifre Onayla</string>
    <string name="iletisimIslemleri" tools:ignore="MissingTranslation">Şifre İşlemleri</string>
    <string name="cihazGirinUyari" tools:ignore="MissingTranslation">Lütfen Bir Cihaz Kimliği Giriniz</string>
    <string name="bosAlanUyarisi" tools:ignore="MissingTranslation">Lütfen Boş Alanları Doldurunuz</string>
    <string name="kullaniciSifreYanlisUyari" tools:ignore="MissingTranslation">Kullanıcı Adı Veya Şifre Yanlış</string>
    <string name="ulkeSecUyari" tools:ignore="MissingTranslation">Lütfen Bir Ülke Seçiniz</string>
    <string name="sehirSecUyari" tools:ignore="MissingTranslation">Lütfen Bir İl Seçiniz</string>
    <string name="ulke" tools:ignore="MissingTranslation">Ülke</string>
    <string name="sehir" tools:ignore="MissingTranslation">İl</string>
    <string name="ayniSifreUyari" tools:ignore="MissingTranslation">Lütfen Aynı Şifreyi Giriniz</string>
    <string name="hataUyari" tools:ignore="MissingTranslation">Bir Hata Oluştu! Tekrar Deneyiniz</string>
    <string name="cikisYap" tools:ignore="MissingTranslation">Çıkış Yap</string>
    <string name="sifreDegistir" tools:ignore="MissingTranslation">Şifre Değiştir</string>
    <string name="baslanmadi" tools:ignore="MissingTranslation">Başlatılmadı</string>
    <string name="sarjOlmuyor" tools:ignore="MissingTranslation">Şarj Olmuyor</string>
    <string name="sarjOluyor" tools:ignore="MissingTranslation">Şarj Oluyor</string>
</resources>