<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundBlue"
    android:orientation="horizontal">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


 <TextView
    android:id="@+id/txtLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/linear"
    android:layout_marginTop="@dimen/_72sdp"
    android:layout_marginLeft="@dimen/_50sdp"
    android:layout_marginRight="@dimen/_50sdp"
    android:gravity="left"
     android:textAllCaps="true"

     android:text="@string/text1"
    android:textColor="@color/beyaz"
    android:textSize="@dimen/_36sdp"/>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_100sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_below="@+id/txtLogin"
        android:background="@drawable/edittext"
        >

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="@dimen/_18sdp"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:background="@drawable/telefonn" />

        <EditText
            android:id="@+id/edit_phonee"
            android:layout_width="0dp"
            android:layout_weight="7.5"
            android:layout_height="@dimen/_32sdp"
            android:layout_below="@id/linear3"
            android:inputType="number"
            android:maxLength="11"
            android:layout_marginLeft="@dimen/_2sdp"
            android:background="@android:color/transparent"
            android:cursorVisible="true"
            android:hint="@string/phone"
            android:textColor="@color/backgroundBlue"
            android:textColorHint="@color/backgroundBlue"
            android:textCursorDrawable="@color/backgroundBlue"
            android:layout_gravity="center"
            android:textSize="@dimen/_12sdp"
            />


    </LinearLayout>



    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear1"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_40sdp"
        android:orientation="horizontal"
        android:background="@drawable/edittext"
        android:weightSum="8">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="@dimen/_18sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:background="@drawable/sifre"
            android:layout_gravity="center"/>

        <EditText

            android:id="@+id/edit_passwordd"
            android:layout_width="0dp"
            android:layout_weight="7.5"
            android:layout_height="@dimen/_32sdp"
            android:layout_below="@id/linear3"
            android:inputType="textPassword"
            android:layout_marginLeft="@dimen/_2sdp"
            android:background="@android:color/transparent"
            android:cursorVisible="true"
            android:hint="@string/password"
            android:textColor="@color/backgroundBlue"
            android:textColorHint="@color/backgroundBlue"
            android:textCursorDrawable="@color/backgroundBlue"
            android:layout_gravity="center"
            android:textSize="@dimen/_12sdp"

            />
    </LinearLayout>



    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_32sdp"
        android:layout_below="@id/linear2"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_64sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:background="@drawable/button"
        android:backgroundTint="@color/butonColor"
        android:onClick="onClick"
        android:text="@string/login"
        android:textSize="@dimen/_12sdp"
        android:textAllCaps="false"
        android:textColor="@color/beyaz"/>

    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:weightSum="100"
        android:layout_height="@dimen/_16sdp"
        android:layout_below="@id/login"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_40sdp"
        >

        <TextView
            android:id="@+id/signUp"
            android:layout_width="0dp"
            android:onClick="onClick"
            android:layout_weight="50"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:text="@string/kayitYap"
            android:layout_gravity="center"
            android:textColor="@color/beyaz" />

        <TextView
            android:id="@+id/forgetPassword"
            android:gravity="right"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:onClick="onClick"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_8sdp"
            android:text="@string/şifremiUnuttum"
            android:textColor="@color/beyaz" />

    </LinearLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/logo"
        />
</RelativeLayout>
</ScrollView>


</RelativeLayout>
