<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
   >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:alpha="0.3"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/leftlayout"
       >

        <ImageView
            android:layout_width="@dimen/_38sdp"
            android:layout_height="@dimen/_38sdp"
            android:background="@drawable/left"
            android:layout_gravity="left"
            android:id="@+id/parentTitle"
            android:onClick="onClick"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/leftlayout"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:weightSum="8">


        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center"
            android:background="@drawable/person" />
        <TextView
            android:text="@string/cihazAyarlari"
            android:layout_width="0dp"
            android:layout_weight="7.5"
            android:layout_height="match_parent"
            android:layout_below="@id/linear3"
            android:id="@+id/cihazAyari"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/beyaz"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/_4sdp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_3sdp"
        android:background="@color/gri"
        android:layout_below="@id/linear1"
        android:layout_marginTop="@dimen/_4sdp"
        android:id="@+id/view"
        android:layout_marginLeft="@dimen/_160sdp"
        android:foregroundGravity="left"
        android:layout_marginRight="@dimen/_32sdp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:id="@+id/linear2"
        android:layout_marginLeft="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:weightSum="10"
        android:layout_marginRight="@dimen/_32sdp">

        <TextView
            android:text="@string/donanimSürümü"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_below="@id/linear3"
            android:id="@+id/version"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/beyaz"
            android:layout_weight="6"
            />
        <TextView
            android:text="1.0.10"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_below="@id/linear3"
            android:id="@+id/versionNum"
            android:layout_weight="4"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/beyaz"
            android:gravity="right"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear3"
        android:layout_below="@+id/linear2"
        android:layout_marginLeft="@dimen/_24sdp"
        android:weightSum="100"
        android:layout_marginTop="4dp"
        android:layout_marginRight="@dimen/_32sdp">


        <TextView
            android:text="@string/sonGuncellem"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_below="@id/linear3"
            android:id="@+id/version2"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/beyaz"
            android:layout_weight="60"
            />
        <TextView
            android:text="29.01.2019"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_below="@id/linear3"
            android:id="@+id/lastUpdate"
            android:layout_weight="40"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/beyaz"
            android:gravity="right"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_28sdp"
        android:id="@+id/linear4"
        android:layout_below="@+id/linear3"
        android:layout_marginLeft="@dimen/_24sdp"
        android:weightSum="10"
        android:layout_marginTop="@dimen/_128sdp"
        android:layout_marginRight="@dimen/_32sdp">


        <TextView
            android:text="@string/cihazDurumu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_below="@id/linear3"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/beyaz"
            android:layout_weight="6"
            android:gravity="left"
            />
        <TextView
            android:text="@string/bagli"
            android:layout_width="0dp"
            android:id="@+id/cihazDurumu"
            android:layout_height="match_parent"
            android:layout_below="@id/linear3"
            android:layout_weight="4"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/green"
            android:gravity="right
"
            />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/_126sdp"
        android:background="@drawable/button"
        android:text="@string/cihaziOku"
        android:id="@+id/button"
        android:textColor="@color/beyaz"
        android:layout_below="@id/linear4"
        android:layout_marginLeft="@dimen/_60sdp"
        android:textAllCaps="false"
        android:layout_marginRight="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_24sdp"
        >

    </Button>
</RelativeLayout>