<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundBlue"
    android:orientation="vertical">



        <TextView
            android:id="@+id/cihazNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_32sdp"
            android:text="1 Numaralı Cihaz Ayarları"
            android:textColor="@color/beyaz"
            android:gravity="right"
            android:layout_marginTop="@dimen/_32sdp"
            android:fontFamily="@font/montserrat_light"
            android:textSize="@dimen/_14sdp"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@id/cihazNo"
        android:layout_marginLeft="@dimen/_160sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:background="@color/beyaz"
        android:id="@+id/view"/>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext"
        android:layout_below="@+id/view"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_64sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:orientation="horizontal"
        android:weightSum="8">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/_18sdp"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:background="@drawable/saat"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"/>

        <EditText
            android:id="@+id/edit_pressure_Adjustment"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_below="@id/linear3"
            android:layout_marginLeft="@dimen/_4sdp"
            android:layout_weight="7.5"
            android:background="@android:color/transparent"
            android:cursorVisible="true"
            android:hint="@string/basincAyari"
            android:fontFamily="@font/montserrat_regular"
            android:inputType="numberDecimal"
            android:textColor="@color/butonColor"
            android:textColorHint="@color/butonColor"
            android:textCursorDrawable="@color/gri"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear1"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:orientation="horizontal"
        android:background="@drawable/edittext"
        android:weightSum="8">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_weight="0.5"
            android:background="@drawable/date"
            android:scaleType="center"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"/>
        <TextView
            android:id="@+id/edit_washing_Date"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_below="@id/linear3"
            android:layout_marginLeft="@dimen/_4sdp"
            android:fontFamily="@font/montserrat_regular"
            android:layout_weight="7.5"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/black"
            android:cursorVisible="true"
            android:gravity="center_vertical"
            android:hint="@string/yikamaTarihi"
            android:focusable="true"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColor="@color/butonColor"
            android:textColorHint="@color/butonColor"
            android:textCursorDrawable="@color/gri"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear3"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:orientation="horizontal"
        android:background="@drawable/edittext"
        android:weightSum="8">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/_18sdp"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:background="@drawable/saat"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"/>

        <TextView
            android:id="@+id/edit_washing_Time"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_below="@id/linear3"
            android:layout_marginLeft="@dimen/_4sdp"
            android:layout_weight="7.5"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/black"
            android:cursorVisible="true"
            android:gravity="center_vertical"
            android:hint="@string/yikamaSaati"
            android:focusable="true"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColor="@color/butonColor"
            android:textColorHint="@color/butonColor"
            android:textCursorDrawable="@color/gri"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear4"
        android:layout_marginLeft="@dimen/_36sdp"
        android:layout_marginRight="@dimen/_44sdp"
        android:id="@+id/linerUyari"
        android:layout_marginTop="@dimen/_16sdp"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="***"
            android:textColor="@color/red"
            android:id="@+id/uyariyildiz"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_2sdp"
            android:text="Not: Güvenlik yıkaması. Delta P dikkate alınmaksızın filtreyi yıkamaya alır."
            android:textColor="@color/beyaz"
            android:id="@+id/uyari"
            android:fontFamily="@font/montserrat_regular"
            />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_32sdp"
        android:layout_below="@id/linerUyari"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/edittext"
        android:cursorVisible="true"
        android:fontFamily="@font/montserrat_regular"
        android:hint="Tarla Mevki"
        android:inputType="numberDecimal"
        android:textColor="@color/butonColor"
        android:textColorHint="@color/butonColor"
        android:id="@+id/tarlaMevki"
        android:textCursorDrawable="@color/gri"
        android:textSize="@dimen/_12sdp"
        android:paddingLeft="@dimen/_32sdp"
    />
    <Button
        android:id="@+id/saveSetting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp"
        android:layout_below="@id/tarlaMevki"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_64sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:background="@drawable/button"
        android:onClick="onClick"
        android:text="Kaydet"
        android:textAllCaps="false"
        android:fontFamily="@font/montserrat_medium"

        android:textColor="@color/beyaz">

    </Button>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/logo"
        />


</RelativeLayout>